--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
     
     <header class="header">
         <div class="esquerdaHeader">
-            <h1>Lado esquerdo</h1>
-            <h1>Imagem aqui</h1>
+            <img src="assets/img/coding-workshop-animate.svg" class="imagemEsquerda" alt="ImagemEsquerda" >
         </div>
         <div class="direitaHeader">
-            <h1>Lado direito</h1>
             <h1>Vitor Quadros</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in</p>
 
         </div>
         
