Ajustado o Hover do NavBar, configuador o Section, feito tentativa de estilizar o section.... precisa ajustar a width

--- a/index.html
+++ b/index.html
@@ -12,18 +12,17 @@
 <body>
 
     <header>
-
         <nav>
             <a class="LogoNav" href="#">LOGO</a>
-            <img src="assets/img/align-justified.svg"  class="responsiveImgNav" alt="">
+            <img src="assets/img/align-justified.svg" class="responsiveImgNav" alt="">
             <ul class="nav-list">
                 <li><a href="#">INICIO</a></li>
                 <li><a href="#">PROJETOS</a></li>
                 <li><a href="#">SOBRE</a></li>
+                <li><a href="#">EXPERIENCIAS</a></li>
                 <li><a href="#">CONTATOS</a></li>
-            </ul>
+                </div>
         </nav>
-
         <main class="MainHeader">
             <div class="esquerdaHeader">
                 <img src="assets/img/coding-workshop-animate.svg" class="imagemEsquerda" alt="ImagemEsquerda">
@@ -39,10 +38,32 @@
         </main>
     </header>
 
+    <div class="SeparaConteudo">
+        <div class="teste">
+        <h1>Experiências</h1>
+    </div>
+    </div>
 
-    <main>
-        <h1 style="color: black;">Só para testes</h1>
-    </main>
+    <section>
+        <div class="sectionContainer">
+            <div class="divSectionContainer">
+                <img src="assets/img/Butovisk.jpg" alt="">
+                <h1>asas</h1>
+            </div>
+            <div class="divSectionContainer">
+                <img src="assets/img/Butovisk.jpg" alt="">
+                <h1>asas</h1>
+             </div>
+             <div class="divSectionContainer">
+                <img src="assets/img/Butovisk.jpg" alt="">
+                <h1>asas</h1>
+             </div>
+             <div class="divSectionContainer">
+                <img src="assets/img/Butovisk.jpg" alt="">
+                <h1>asdhuqwhduqwhduqwhduiqw </h1>
+             </div>
+        </div>
+    </section>
 
     <footer>
 
@@ -50,7 +71,7 @@
 
 
     <script src="assets/mobile-navbar.js">
-        
+
     </script>
 
 </body>
