--- a/index.html
+++ b/index.html
@@ -40,29 +40,38 @@
 
     <div class="SeparaConteudo">
         <div class="teste">
-        <h1>Experiências</h1>
-    </div>
+            <h1>Experiências</h1>
+        </div>
     </div>
 
-    <section>
-        <div class="sectionContainer">
+    <section class="sectionContainer">
+        <div class="FlexDivContainer">
             <div class="divSectionContainer">
-                <img src="assets/img/Butovisk.jpg" alt="">
-                <h1>asas</h1>
+                <div class="ConteudoDivSelectionContainer">
+                    <img src="assets/img/Butovisk.jpg" alt="">
+                    <h1>DIV</h1>
+                </div>
             </div>
             <div class="divSectionContainer">
-                <img src="assets/img/Butovisk.jpg" alt="">
-                <h1>asas</h1>
-             </div>
-             <div class="divSectionContainer">
-                <img src="assets/img/Butovisk.jpg" alt="">
-                <h1>asas</h1>
-             </div>
-             <div class="divSectionContainer">
-                <img src="assets/img/Butovisk.jpg" alt="">
-                <h1>asdhuqwhduqwhduqwhduiqw </h1>
-             </div>
+                <div class="ConteudoDivSelectionContainer">
+                    <img src="assets/img/Butovisk.jpg" alt="">
+                    <h1>DIV</h1>
+                </div>
+            </div>
+            <div class="divSectionContainer">
+                <div class="ConteudoDivSelectionContainer">
+                    <img src="assets/img/Butovisk.jpg" alt="">
+                    <h1>DIV</h1>
+                </div>
+            </div>
+            <div class="divSectionContainer">
+                <div class="ConteudoDivSelectionContainer">
+                    <img src="assets/img/Butovisk.jpg" alt="">
+                    <h1>DIV</h1>
+                </div>
+            </div>
         </div>
+        
     </section>
 
     <footer>
