Criado a div SOBRE, ajustado os projetos

--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
         </main>
     </header>
 
+
+    <!--Começo da Section PROJETOS-->
     <div class="SeparaConteudo">
         <div class="teste">
-            <h1>Experiências</h1>
+            <h1>PROJETOS</h1>
         </div>
     </div>
 
@@ -48,36 +50,82 @@
         <div class="FlexDivContainer">
             <div class="divSectionContainer">
                 <div class="ConteudoDivSelectionContainer">
-                    <img src="assets/img/Butovisk.jpg" alt="">
-                    <h1>DIV</h1>
+                    <img src="assets/img/pygame.jpg" alt="">
+                    <h1>Pygame</h1>
+                    <p>Criação de um jogo realizado no primeiro semestre da computação</p>
                 </div>
             </div>
             <div class="divSectionContainer">
                 <div class="ConteudoDivSelectionContainer">
-                    <img src="assets/img/Butovisk.jpg" alt="">
-                    <h1>DIV</h1>
+                    <img src="assets/img/LojaNike.jpg" alt="">
+                    <h1>Loja Nike</h1>
+                    <p>Projeto final do módulo de programação no técnico em informática</p>
                 </div>
             </div>
             <div class="divSectionContainer">
                 <div class="ConteudoDivSelectionContainer">
-                    <img src="assets/img/Butovisk.jpg" alt="">
-                    <h1>DIV</h1>
+                    <img src="assets/img/Sojogos.jpg" alt="">
+                    <h1>Pagina Jogos</h1>
+                    <p>Pagina de dicas e curiosidades em jogos</p>
                 </div>
             </div>
-            <div class="divSectionContainer">
-                <div class="ConteudoDivSelectionContainer">
-                    <img src="assets/img/Butovisk.jpg" alt="">
-                    <h1>DIV</h1>
-                </div>
-            </div>
+
         </div>
-        
     </section>
 
+    <!--Fim da Section PROJETOS-->
+
+
+    <!--SOBRE-->
+    <div class="SeparaConteudo">
+        <div class="teste">
+            <h1>SOBRE</h1>
+        </div>
+    </div>
+
+    <section>
+        <div class="MainSobre">
+            <div class="EsquerdaSobre">
+                <div class="DefineTamanhoSobreEsquerda">
+                    <img src="assets/img/pygame.jpg" alt="">
+                    <h1>Esquerda</h1>
+                    <div class="DefineTamanhoSobreEsquerda1">
+                        
+                    </div>
+                </div>
+            </div>
+            <div class="DireitaSobre">
+                <div class="DefineTamanhoSobreDireita">
+                    <div class="DefineMargemSobreDireita">
+                        <h1>DIREITA</h1>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+                            galley of type and scrambled it to make a type specimen book. It has survived not only five
+                            centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
+                            passages, and more recently with desktop publishing software like Aldus PageMaker including
+                            versions of Lorem Ipsum.</p>
+                    </div>
+                </div>
+                <h1></h1>
+            </div>
+        </div>
+    </section>
+    <!--FIM SOBRE-->
+
+
+
+
+
+    <!--FOOTER-->
     <footer>
-
+        <div class="footerMain">
+            <div class="ConteudoFooter">
+                <h1>Vitor Quadros</h1>
+            </div>
+        </div>
     </footer>
-
+    <!--FIM FOOTER-->
 
     <script src="assets/mobile-navbar.js">
 
