--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabalho Disciplina</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/reset.css">
     <link rel="stylesheet" href="assets/style.css">
+    
 </head>
 
 <body>
@@ -87,34 +89,50 @@
         <div class="MainSobre">
             <div class="EsquerdaSobre">
                 <div class="DefineTamanhoSobreEsquerda">
-                    <img src="assets/img/pygame.jpg" alt="">
-                    <h1>Esquerda</h1>
-                    <div class="DefineTamanhoSobreEsquerda1">
-                        
-                    </div>
+                    <img src="assets/img/ultimoRomantico.jpg" alt="">
+
                 </div>
             </div>
             <div class="DireitaSobre">
                 <div class="DefineTamanhoSobreDireita">
                     <div class="DefineMargemSobreDireita">
-                        <h1>DIREITA</h1>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-                            galley of type and scrambled it to make a type specimen book. It has survived not only five
-                            centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
-                            passages, and more recently with desktop publishing software like Aldus PageMaker including
-                            versions of Lorem Ipsum.</p>
+                        <p>Sou Vitor Quadros, um estudante da computação apaixonado por inovação e tecnologia. Minha
+                            jornada profissional tem sido uma busca constante pela excelência e pela
+                            inovação. Atualmente, estou no segundo semestre da faculdade de Ciência da
+                            Computação, e minha jornada profissional tem sido uma busca constante pela excelência e
+                            inovação. Desde o início da minha formação, fiquei encantado com o vasto mundo da computação
+                            e as infinitas possibilidades que ele oferece.</p>
+                    </div>
+                    <div class="IconsSobre">
+                        <i class="bi bi-github"></i>
+                        <i class="bi bi-github"></i>
+                        <i class="bi bi-github"></i>
                     </div>
                 </div>
-                <h1></h1>
             </div>
         </div>
     </section>
     <!--FIM SOBRE-->
 
+    <!--EXPERIÊNCIA-->
+    <div class="SeparaConteudo">
+        <div class="teste">
+            <h1>Experiência</h1>
+        </div>
+    </div>
 
 
+    <section>
+        <div class="mainExperiência">
+            <h1>Exemplo projeto https://people.umass.edu/avsingh/</h1>
+        </div>
+    </section>
+
+
+
+
+
+    <!--FIM EXPERIÊNCIA-->
 
 
     <!--FOOTER-->
