--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabalho Disciplina</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@300;600&family=Roboto:wght@300;400;700&family=Teko:wght@300;400&display=swap"
+        rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/reset.css">
     <link rel="stylesheet" href="assets/style.css">
-    
+
 </head>
 
 <body>
@@ -89,7 +99,7 @@
         <div class="MainSobre">
             <div class="EsquerdaSobre">
                 <div class="DefineTamanhoSobreEsquerda">
-                    <img src="assets/img/ultimoRomantico.jpg" alt="">
+                    <img src="assets/img/ultimoRomantico2.jpg" alt="">
 
                 </div>
             </div>
@@ -121,10 +131,22 @@
         </div>
     </div>
 
-
+    
     <section>
-        <div class="mainExperiência">
-            <h1>Exemplo projeto https://people.umass.edu/avsingh/</h1>
+        <!--<h1>Exemplo projeto https://people.umass.edu/avsingh/</h1>-->
+        <div class="mainExperiencia">
+            <div class="DefineTamanhoExperiencia">
+                <h1>Teste</h1>
+            </div>
+            <div class="DefineTamanhoExperiencia">
+                <h1>Teste</h1>
+            </div>
+            <div class="DefineTamanhoExperiencia">
+                <h1>Teste</h1>
+            </div>
+            <div class="DefineTamanhoExperiencia">
+                <h1>Teste</h1>
+            </div>
         </div>
     </section>
 
