--- a/index.html
+++ b/index.html
@@ -127,27 +127,67 @@
     <!--EXPERIÊNCIA-->
     <div class="SeparaConteudo">
         <div class="teste">
-            <h1>Experiência</h1>
+            <h1>Projetos</h1>
         </div>
     </div>
 
-    
+
     <section>
         <!--<h1>Exemplo projeto https://people.umass.edu/avsingh/</h1>-->
-        <div class="mainExperiencia">
-            <div class="DefineTamanhoExperiencia">
-                <h1>Teste</h1>
+        <!--Contudo lado Esquerdo / Imagem lado direito-->
+        <div class="mainProjects">
+            <div class="LadoEsquerdoProjects">
+                <div class="DefineTamanhoEsquerdoProjects">
+                    <h1>Personal Website</h1>
+                    <div>
+                        <img src="assets/Icons/github.png" alt="">
+                        <img src="assets/Icons/github.png" alt="">
+                        <img src="assets/Icons/github.png" alt="">
+                    </div>
+                    <span>
+                        I developed and designed a website using ReactJS and Bootstrap, hosted on Github Pages, to
+                        showcase
+                        my web presence, story, work experience, education, projects, and achievements in an interactive
+                        and
+                        visually-appealing format.
+                    </span>
+                </div>
             </div>
-            <div class="DefineTamanhoExperiencia">
-                <h1>Teste</h1>
-            </div>
-            <div class="DefineTamanhoExperiencia">
-                <h1>Teste</h1>
-            </div>
-            <div class="DefineTamanhoExperiencia">
-                <h1>Teste</h1>
+            <div class="LadoDireitoProjects">
+                <div class="AjustaImagemProjects">
+                    <img src="assets/img/Sojogos.jpg" alt="">
+                </div>
             </div>
         </div>
+        <!--Imagem Lado Esquerdo / Conteudo Lado Direito-->
+        <div class="mainProjects">
+            <div class="LadoDireitoProjects">
+                <div class="AjustaImagemProjects">
+                    <img src="assets/img/Sojogos.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="LadoEsquerdoProjects">
+                <div class="DefineTamanhoEsquerdoProjects">
+                    <h1>Personal Website</h1>
+                    <div>
+                        <img src="assets/Icons/github.png" alt="">
+                        <img src="assets/Icons/github.png" alt="">
+                        <img src="assets/Icons/github.png" alt="">
+                    </div>
+                    <span>
+                        I developed and designed a website using ReactJS and Bootstrap, hosted on Github Pages, to
+                        showcase
+                        my web presence, story, work experience, education, projects, and achievements in an interactive
+                        and
+                        visually-appealing format.
+                    </span>
+                </div>
+            </div>
+        </div>
+
+
+
     </section>
 
 
