--- a/index.html
+++ b/index.html
@@ -186,6 +186,51 @@
             </div>
         </div>
 
+        
+        <div class="MainIconsProjects">
+            <div class="LarguraIconsProjects">
+                <div class="bordaIconsProjects">
+                    <h1>Languages</h1>
+                    <img src="assets/Icons/github.png" alt="">
+                    <img src="assets/Icons/github.png" alt="">
+                    <img src="assets/Icons/github.png" alt="">
+                    <img src="assets/Icons/github.png" alt="">
+                    <span>
+                        My favorite languages for systems programming, software engineering, and data analysis.
+                    </span>
+                </div>
+                <div class="bordaIconsProjects">
+                    <h1>Languages</h1>
+                    <img src="assets/Icons/github.png" alt="">
+                    <img src="assets/Icons/github.png" alt="">
+                    <img src="assets/Icons/github.png" alt="">
+                    <img src="assets/Icons/github.png" alt="">
+                    <span>
+                        My favorite languages for systems programming, software engineering, and data analysis.
+                    </span>
+                </div>
+                <div class="bordaIconsProjects">
+                    <h1>Languages</h1>
+                    <img src="assets/Icons/github.png" alt="">
+                    <img src="assets/Icons/github.png" alt="">
+                    <img src="assets/Icons/github.png" alt="">
+                    <img src="assets/Icons/github.png" alt="">
+                    <span>
+                        My favorite languages for systems programming, software engineering, and data analysis.
+                    </span>
+                </div>
+                <div class="bordaIconsProjects">
+                    <h1>Languages</h1>
+                    <img src="assets/Icons/github.png" alt="">
+                    <img src="assets/Icons/github.png" alt="">
+                    <img src="assets/Icons/github.png" alt="">
+                    <img src="assets/Icons/github.png" alt="">
+                    <span>
+                        My favorite languages for systems programming, software engineering, and data analysis.
+                    </span>
+                </div>
+            </div>
+        </div>
 
 
     </section>
