--- a/index.html
+++ b/index.html
@@ -50,42 +50,127 @@
         </main>
     </header>
 
-
-    <!--Começo da Section PROJETOS-->
+    <!--EXPERIÊNCIA-->
     <div class="SeparaConteudo">
         <div class="teste">
-            <h1>PROJETOS</h1>
+            <h1>Projetos</h1>
         </div>
     </div>
 
-    <section class="sectionContainer">
-        <div class="FlexDivContainer">
-            <div class="divSectionContainer">
-                <div class="ConteudoDivSelectionContainer">
-                    <img src="assets/img/pygame.jpg" alt="">
+
+    <section>
+        <!--<h1>Exemplo projeto https://people.umass.edu/avsingh/</h1>-->
+        <!--Contudo lado Esquerdo / Imagem lado direito-->
+        <div class="mainProjects">
+            <div class="LadoEsquerdoProjects">
+                <div class="DefineTamanhoEsquerdoProjects">
                     <h1>Pygame</h1>
-                    <p>Criação de um jogo realizado no primeiro semestre da computação</p>
+                    <div>
+                        <img src="assets/Icons/html-5.png" alt="">
+                        <img src="assets/Icons/css-3.png" alt="">
+                        <img src="assets/Icons/github.png" alt="">
+                        <img src="assets/Icons/github.png" alt="">
+                    </div>
+                    <span>
+                        I developed and designed a website using ReactJS and Bootstrap, hosted on Github Pages, to
+                        showcase
+                        my web presence, story, work experience, education, projects, and achievements in an interactive
+                        and
+                        visually-appealing format.
+                    </span>
                 </div>
             </div>
-            <div class="divSectionContainer">
-                <div class="ConteudoDivSelectionContainer">
+            <div class="LadoDireitoProjects">
+                <div class="AjustaImagemProjects">
+                    <img src="assets/img/pygame.jpg" alt="">
+                </div>
+            </div>
+        </div>
+        <!--Imagem Lado Esquerdo / Conteudo Lado Direito-->
+        <div class="mainProjects">
+            <div class="LadoDireitoProjects">
+                <div class="AjustaImagemProjects">
                     <img src="assets/img/LojaNike.jpg" alt="">
-                    <h1>Loja Nike</h1>
-                    <p>Projeto final do módulo de programação no técnico em informática</p>
-                </div>
-            </div>
-            <div class="divSectionContainer">
-                <div class="ConteudoDivSelectionContainer">
-                    <img src="assets/img/Sojogos.jpg" alt="">
-                    <h1>Pagina Jogos</h1>
-                    <p>Pagina de dicas e curiosidades em jogos</p>
                 </div>
             </div>
 
+            <div class="LadoEsquerdoProjects">
+                <div class="DefineTamanhoEsquerdoProjects">
+                    <h1>LojaNike</h1>
+                    <div>
+                        <img src="assets/Icons/html-5.png" alt="">
+                        <img src="assets/Icons/css-3.png" alt="">
+                        <img src="assets/Icons/github.png" alt="">
+                        <img src="assets/Icons/github.png" alt="">
+                    </div>
+                    <span>
+                        I developed and designed a website using ReactJS and Bootstrap, hosted on Github Pages, to
+                        showcase
+                        my web presence, story, work experience, education, projects, and achievements in an interactive
+                        and
+                        visually-appealing format.
+                    </span>
+                </div>
+            </div>
         </div>
+
+        <h1 style="color: aqua; background: #201b2c;  text-align: center; font-size: 30px; padding: 10px;">Linguagens
+        </h1>
+
+
+        <div class="MainIconsProjects">
+            <div class="LarguraIconsProjects">
+                <div class="bordaIconsProjects">
+                    <h1>Linguagens</h1>
+                    <img src="assets/Icons/html-5.png" alt="">
+                    <img src="assets/Icons/css-3.png" alt="">
+                    <img src="assets/Icons/github.png" alt="">
+                    <img src="assets/Icons/github.png" alt="">
+                    <span>
+                        My favorite languages for systems programming, software engineering, and data analysis.
+                    </span>
+                </div>
+                <div class="bordaIconsProjects">
+                    <h1>Back-end</h1>
+                    <img src="assets/Icons/java.png" alt="">
+                    <img src="assets/Icons/php.png" alt="">
+                    <img src="assets/Icons/servidor-sql.png" alt="">
+                    <img src="assets/Icons/github.png" alt="">
+                    <span>
+                        My favorite languages for systems programming, software engineering, and data analysis.
+                    </span>
+                </div>
+                <div class="bordaIconsProjects">
+                    <h1>front-end</h1>
+                    <img src="assets/Icons/html-5.png" alt="">
+                    <img src="assets/Icons/css-3.png" alt="">
+                    <img src="assets/Icons/bootstrap.png" alt="">
+                    <img src="assets/Icons/JavaScript.png" alt="">
+                    <span>
+                        My favorite languages for systems programming, software engineering, and data analysis.
+                    </span>
+                </div>
+                <div class="bordaIconsProjects">
+                    <h1>Ferramentas</h1>
+                    <img src="assets/Icons/figma.png" alt="">
+                    <img src="assets/Icons/VsCode.png" alt="">
+                    <img src="assets/Icons/Eclipse.png" alt="">
+                    <img src="assets/Icons/github.png" alt="">
+                    <span>
+                        My favorite languages for systems programming, software engineering, and data analysis.
+                    </span>
+                </div>
+            </div>
+        </div>
+
+
     </section>
 
-    <!--Fim da Section PROJETOS-->
+
+
+
+
+    <!--FIM EXPERIÊNCIA-->
 
 
     <!--SOBRE-->
@@ -124,122 +209,7 @@
     </section>
     <!--FIM SOBRE-->
 
-    <!--EXPERIÊNCIA-->
-    <div class="SeparaConteudo">
-        <div class="teste">
-            <h1>Projetos</h1>
-        </div>
-    </div>
 
-
-    <section>
-        <!--<h1>Exemplo projeto https://people.umass.edu/avsingh/</h1>-->
-        <!--Contudo lado Esquerdo / Imagem lado direito-->
-        <div class="mainProjects">
-            <div class="LadoEsquerdoProjects">
-                <div class="DefineTamanhoEsquerdoProjects">
-                    <h1>Personal Website</h1>
-                    <div>
-                        <img src="assets/Icons/github.png" alt="">
-                        <img src="assets/Icons/github.png" alt="">
-                        <img src="assets/Icons/github.png" alt="">
-                    </div>
-                    <span>
-                        I developed and designed a website using ReactJS and Bootstrap, hosted on Github Pages, to
-                        showcase
-                        my web presence, story, work experience, education, projects, and achievements in an interactive
-                        and
-                        visually-appealing format.
-                    </span>
-                </div>
-            </div>
-            <div class="LadoDireitoProjects">
-                <div class="AjustaImagemProjects">
-                    <img src="assets/img/Sojogos.jpg" alt="">
-                </div>
-            </div>
-        </div>
-        <!--Imagem Lado Esquerdo / Conteudo Lado Direito-->
-        <div class="mainProjects">
-            <div class="LadoDireitoProjects">
-                <div class="AjustaImagemProjects">
-                    <img src="assets/img/Sojogos.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="LadoEsquerdoProjects">
-                <div class="DefineTamanhoEsquerdoProjects">
-                    <h1>Personal Website</h1>
-                    <div>
-                        <img src="assets/Icons/github.png" alt="">
-                        <img src="assets/Icons/github.png" alt="">
-                        <img src="assets/Icons/github.png" alt="">
-                    </div>
-                    <span>
-                        I developed and designed a website using ReactJS and Bootstrap, hosted on Github Pages, to
-                        showcase
-                        my web presence, story, work experience, education, projects, and achievements in an interactive
-                        and
-                        visually-appealing format.
-                    </span>
-                </div>
-            </div>
-        </div>
-
-        
-        <div class="MainIconsProjects">
-            <div class="LarguraIconsProjects">
-                <div class="bordaIconsProjects">
-                    <h1>Languages</h1>
-                    <img src="assets/Icons/github.png" alt="">
-                    <img src="assets/Icons/github.png" alt="">
-                    <img src="assets/Icons/github.png" alt="">
-                    <img src="assets/Icons/github.png" alt="">
-                    <span>
-                        My favorite languages for systems programming, software engineering, and data analysis.
-                    </span>
-                </div>
-                <div class="bordaIconsProjects">
-                    <h1>Languages</h1>
-                    <img src="assets/Icons/github.png" alt="">
-                    <img src="assets/Icons/github.png" alt="">
-                    <img src="assets/Icons/github.png" alt="">
-                    <img src="assets/Icons/github.png" alt="">
-                    <span>
-                        My favorite languages for systems programming, software engineering, and data analysis.
-                    </span>
-                </div>
-                <div class="bordaIconsProjects">
-                    <h1>Languages</h1>
-                    <img src="assets/Icons/github.png" alt="">
-                    <img src="assets/Icons/github.png" alt="">
-                    <img src="assets/Icons/github.png" alt="">
-                    <img src="assets/Icons/github.png" alt="">
-                    <span>
-                        My favorite languages for systems programming, software engineering, and data analysis.
-                    </span>
-                </div>
-                <div class="bordaIconsProjects">
-                    <h1>Languages</h1>
-                    <img src="assets/Icons/github.png" alt="">
-                    <img src="assets/Icons/github.png" alt="">
-                    <img src="assets/Icons/github.png" alt="">
-                    <img src="assets/Icons/github.png" alt="">
-                    <span>
-                        My favorite languages for systems programming, software engineering, and data analysis.
-                    </span>
-                </div>
-            </div>
-        </div>
-
-
-    </section>
-
-
-
-
-
-    <!--FIM EXPERIÊNCIA-->
 
 
     <!--FOOTER-->
